Fix nav-menu spacing from different devices, by fixing body font size in css

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -35,6 +35,10 @@ $nav-folder-menu-current-font-color: $npp-green-title;
 // quick fix
 // =========
 
+body {
+	font-size: 16px;
+}
+
 img {
 	display: block;
 	margin-left: auto;
